[gd_scene load_steps=2 format=3 uid="uid://bv4hauths32fh"]

[ext_resource type="Script" path="res://src/world/dialog_area.gd" id="1_7dcqv"]

[node name="DialogArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_7dcqv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="CoolDownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_cool_down_timer_timeout"]
